[tool.poetry]
name = "heatshrinkpy"
version = "0.11.0"
description = "Pure Python heatshrink library, based on heatshrink2 library"
authors = [
    "Antonis Kalou <antonis@johan-sports.com>",
    "Erik Moqvist <erik.moqvist@gmail.com>",
    "Marcin Jaworski <marcin@jaworski.me>",
]
license = "ISC"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^6.6.0", python = "<3.8" }

[tool.poetry.scripts]
heatshrinkpy = "heatshrinkpy:_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
