[tool.poetry]
name = "heatshrinkpy"
version = "0.11.1"
description = "Pure Python heatshrink library, based on heatshrink2 library"
# Poetry includes only the first author in the dist
# as python metadata supports only a single author
authors = [
    "Marcin Jaworski <marcin@jaworski.me>",
    "Antonis Kalou <antonis@johan-sports.com>",
    "Erik Moqvist <erik.moqvist@gmail.com>",
]
license = "ISC"
readme = "README.rst"

include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^6.6.0", python = "<3.8" }

[tool.poetry.scripts]
heatshrinkpy = "heatshrinkpy:_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
