[tool.poetry]
name = "heatshrinkpy"
version = "0.11.1"
description = "Pure Python heatshrink library, based on heatshrink2 library"
# Poetry includes only the first author in the dist
# as python metadata supports only a single author
authors = [
    "Marcin Jaworski <marcin@jaworski.me>",
    "Antonis Kalou <antonis@johan-sports.com>",
    "Erik Moqvist <erik.moqvist@gmail.com>",
]
license = "ISC"
readme = "README.rst"

include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^6.6.0", python = "<3.8" }

[tool.poetry.scripts]
heatshrinkpy = "heatshrinkpy:_main"

[tool.poe.tasks._bump_version]
cmd = "poetry version -s"

[tool.poe.tasks.prepare-release]
sequence = [
    { cmd = "git add pyproject.toml" },
    { cmd = "git commit -m \"v${VERSION}\"" },
    { cmd = "git tag \"v${VERSION}\"" },
]
args = [
    { name = "version", required = true, positional = true}
]
uses = { VERSION = "_bump_version -- ${version}" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
